LED kode/LEDcontrol/LED_control.cydsn/REBUILD.log
--------------- Rebuild Started: 03/27/2020 14:09:08 Project: LED_control, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LEDdata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIM_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIM_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIM_1_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIM_1_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\timer_clock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\isr_LED_refreshrate.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\timer_clock_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer2_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\timer_clock_2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer3.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer3_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\isr_LED_pulse.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\isr_LED_ring.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LEDdata2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIMOutCtrl.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPIMOutCtrl_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\timer_clock_3.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer4.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer4_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\isr_BlinkLED.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED_control.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED_control.elf"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED_control.map"
Deleting file ".\LED_control.cycdx"
Deleting file ".\LED_control.svd"
Deleting file ".\LED_control.rpt"
Deleting file ".\LED_control_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\cring\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\cring\Documents\GitHub\E5PRJ3\LED kode\LEDcontrol\LED_control.cydsn\LED_control.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\cring\Documents\GitHub\E5PRJ3\LED kode\LEDcontrol\LED_control.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I.\FastLEd -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I.\FastLEd -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/LEDcontrol.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c LEDcontrol.c -o .\CortexM3\ARM_GCC_541\Debug\LEDcontrol.o
LEDcontrol.c: In function 'initLED':
LEDcontrol.c:121:5: error: 'Timer4' undeclared (first use in this function)
     Timer4.Start();
     ^
LEDcontrol.c:121:5: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 03/27/2020 14:09:22 ---------------
